--- a/templates/song-add.html
+++ b/templates/song-add.html
@@ -28,7 +28,7 @@
 
       <div class="form-group">
         <label>Description</label>
-        <textarea class="form-control" name="lyrics" placeholder="Description" required="true"></textarea>
+        <textarea class="form-control" name="Descripton" placeholder="Description" required="true"></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Add Course</button>
     </form>
