--- a/templates/artist-add.html
+++ b/templates/artist-add.html
@@ -12,7 +12,7 @@
       </div>
       <div class="form-group">
         <label>Department</label>
-        <textarea class="form-control" name="about" placeholder="Department" required="true"></textarea>
+        <textarea class="form-control" name="Department" placeholder="Department" required="true"></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Add Professor</button>
     </form>
